--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Redux Saga beginner tutorial",
   "main": "lib/index.js",
   "scripts": {
-    "test": "babel-node sagas.spec.js | tap-spec",
+    "test": "babel-node saga.spec.js | tap-spec",
     "start": "budo main.js:build.js --dir ./ --verbose  --live -- -t babelify"
   },
   "repository": {
@@ -17,6 +17,7 @@
     "babel-polyfill": "6.3.14",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-redux": "^7.1.1",
     "redux": "^3.3.1",
     "redux-saga": "^0.15.0"
   },
